# TechFin

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.infra.yaml  market_plan.md  package-lock.json  package.json  pitch_outline.md  prisma.config.ts  tasks.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 70839325787b_add_chat_sessions_and_messages.py  a1b2c3d4e5f6_add_raw_news_articles_and_ingestion_jobs.py  b3c4d5e6f7a8_add_sentiment_to_raw_news.py  ed54ef4f5664_initial.py
backend/app/: auth.py  config.py  database.py  database_graph.py  main.py
backend/app/ai/: graph.py  neo4j_client.py
backend/app/data/: tickers.py  yahoo_industries.py
backend/app/models/: __init__.py  base.py  chat.py  holding.py  ingestion_job.py  raw_news.py  user.py
backend/app/routes/: ai_agents.py  auth.py  graph.py  holdings.py  reddit.py  sentiment.py  social.py  suggestions.py  tickers.py  user.py  yahoo_finance.py
backend/app/schemas/: article.py  chat.py  holding.py  sentiment.py  social.py  ticker.py  user.py
backend/app/services/: alphavantage_news.py  graph_ingestion.py  graph_queries.py  linkedin.py  llm_extraction.py  market_movers.py  news_fetcher.py  reddit.py  scheduler.py  sectors.py  sentiment.py  twitter.py  yahoo_finance.py
backend/scripts/: seed.py
documentations/: AGENT_ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  globals.css
prisma/: schema.prisma  seed.ts
scripts/: alphavantage.py  batch_ingestion.py  run_ingestion.py  test.json
scripts/articles/: earnings.json  energy_transportation.json  finance.json  manufacturing.json  monetary_policy.json  retail_wholesale.json  technology.json
src/app/: globals.css  layout.tsx  page.tsx
src/hooks/: useFirstLogin.ts  useHoldings.ts  useReddit.ts  useSentiment.ts  useYahooFinance.ts
(+98 files in other folders)
